update cargo toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,8 @@ description = "A simple i18n library for rust"
 readme = "./README.md"
 repository = "https://github.com/LyunKi/intl-rs"
 license = "MIT"
-license-file = "./LICENSE"
 keywords = ["i18n","intl","internationalization","localization"]
-categories =["Localization (L10n)","Internationalization (i18n)","Web programming"]
+categories =["localization","internationalization","web-programming"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
