--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ serde_json = "1.0.51"
 lazy_static = "1.4.0"
 string_template = "0.2.1"
 Inflector = "0.11.4"
+tokio = { version = "1.16.1", features = ["sync"] }
+accept-language = "2.0.0"
