--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "intl-rs"
-version = "1.2.0"
+name = "intl_rs"
+version = "2.0.0"
 authors = ["LyunKi <ly1169134156@163.com>"]
 edition = "2018"
 description = "A simple i18n library for rust"
